Fix SDK reference docs: create_workflow structure, update_workflow ID, browser profile params
- create_workflow snippet: add required title + workflow_definition wrapper (was flat blocks/parameters)
- update_workflow: use permanent ID (wpid_...) not version ID (wf_...)
- create_browser_profile: mark workflow_run_id/browser_session_id as conditional (one required)
- Apply same fixes to both Python and TypeScript SDK reference pages

--- a/docs/sdk-reference/browser-profiles.mdx
+++ b/docs/sdk-reference/browser-profiles.mdx
@@ -28,8 +28,10 @@ print(profile.browser_profile_id)  # bpf_abc123
 |-----------|------|----------|-------------|
 | `name` | `str` | Yes | Display name for the profile. |
 | `description` | `str` | No | Optional description. |
-| `workflow_run_id` | `str` | No | The workflow run ID to snapshot. The run must have used `persist_browser_session=True`. |
-| `browser_session_id` | `str` | No | The browser session ID to snapshot. |
+| `workflow_run_id` | `str` | Conditional | The workflow run ID to snapshot. The run must have used `persist_browser_session=True`. Required if `browser_session_id` is not provided. |
+| `browser_session_id` | `str` | Conditional | The browser session ID to snapshot. Required if `workflow_run_id` is not provided. |
+
+You must provide either `workflow_run_id` or `browser_session_id`.
 
 ### Returns `BrowserProfile`
 
