--- a/docs/cookbooks/overview.mdx
+++ b/docs/cookbooks/overview.mdx
@@ -21,7 +21,7 @@ Each cookbook walks through the workflow step-by-step, explaining design decisio
     Download invoices from vendor portals, parse PDFs to extract amounts, and email a summary with attachments.
   </Card>
   <Card
-    title="Job Application Pipeline"
+    title="Job Applications Pipeline"
     icon="briefcase"
     href="/cookbooks/job-application-filler"
   >
