cloud ui docs + cookbooks (#4759)
Co-authored-by: Ritik Sahni <ritiksahni0203@gmail.com>
Co-authored-by: Kunal Mishra <kunalm2345@gmail.com>

--- a/docs/cloud/getting-started/overview.mdx
+++ b/docs/cloud/getting-started/overview.mdx
@@ -31,9 +31,6 @@ Where you create and monitor automations.
 
 ### Agents
 
-{/* TODO: Replace with screenshot of Agents section */}
-<img src="/images/cloud/placeholder-agents-section.png" alt="Agents page showing pre-built automation templates" />
-
 Ready-made automation templates. Each agent is preconfigured with a prompt, target URL, and settings. Pick one to see it work or use it as a starting point for your own task.
 
 ### General
@@ -53,7 +50,7 @@ Every automation in Skyvern Cloud follows the same pattern:
     Type what you want into the prompt bar. Include the target URL and your instructions in one go. Something like "Get the top post from https://news.ycombinator.com" or "Fill out the contact form at https://example.com/contact with my details."
   </Step>
   <Step title="Watch it happen">
-    A cloud browser opens and you see it navigate in real time. Pages load, elements highlight, actions fire. An agent log streams the AI's reasoning, showing every Thought and Decision, so you can follow along. If the AI gets stuck, hit **Take Control** to jump in and help.
+    A cloud browser opens and you see it navigate in real time. Pages load, elements highlight, actions fire. An agent log streams the AI's reasoning — what it sees on the page, what it plans to do, and why — so you can follow along. If the AI gets stuck, hit **Take Control** to jump in and help.
   </Step>
   <Step title="Get your results">
     Extracted data appears as structured JSON on the run detail page. Every run also includes an output view, full recording, the parameters you submitted, and auto-generated code to reproduce the task via API.
@@ -70,7 +67,7 @@ That's it. The next guide walks you through this flow with a real example.
   <Card
     title="Run Your First Task"
     icon="play"
-    href="/cloud/run-your-first-task"
+    href="/cloud/getting-started/run-your-first-task"
   >
     Follow along with a real example to see Skyvern Cloud in action
   </Card>
@@ -79,6 +76,6 @@ That's it. The next guide walks you through this flow with a real example.
     icon="book"
     href="/getting-started/core-concepts"
   >
-    Understand tasks, workflows, blocks, and other building blocks
+    Understand tasks, workflows, and other foundational concepts
   </Card>
 </CardGroup>
