--- a/fern/integrations/mcp.mdx
+++ b/fern/integrations/mcp.mdx
@@ -5,14 +5,16 @@ slug: integrations/mcp
 
 # Model Context Protocol (MCP)
 
-Skyvern's MCP server implementation helps connect your AI applications to the browser. This allows your AI applications to do things like: fill out forms, download files, research information on the web, and more.
+Skyvern MCP lets your MCP client control browser automation tools (navigation, extraction, workflows, screenshots, and more).
 
-You can connect your MCP-enabled applications to Skyvern in two ways:
-1. **Local Skyvern Server**
-   - Use your favourite LLM to power Skyvern
-2. **Skyvern Cloud**
-   - Create an account at [app.skyvern.com](https://app.skyvern.com)
-   - Get the API key from the settings page which will be used for setup
+<Note title="Current availability">
+Skyvern MCP currently runs as a local stdio process (`skyvern run mcp`) on your machine.
+Remote-hosted MCP is planned, but is not the default setup today.
+</Note>
+
+You can use MCP with:
+1. **Skyvern Cloud** (`SKYVERN_BASE_URL=https://api.skyvern.com` + your API key)
+2. **Local Skyvern Server** (`SKYVERN_BASE_URL=http://localhost:8000`)
 
 ## Quickstart
 <Tip title="Supported Python Versions" icon="fa-brands fa-python">
@@ -24,15 +26,79 @@ Python 3.11, 3.12 and 3.13
 pip install skyvern
 ```
 
-2. **Configure Skyvern** Run the setup wizard which will guide you through the configuration process. You can connect to either [Skyvern Cloud](https://app.skyvern.com) or a local version of Skyvern.
+2. **Run the setup wizard**
 ```bash
 skyvern init
 ```
+The wizard will:
+- ask whether to use Cloud or local mode
+- collect/set `SKYVERN_BASE_URL` and `SKYVERN_API_KEY`
+- auto-configure MCP for Claude Desktop, Cursor, and Windsurf
 
-3. **(Optional) Launch the Skyvern Server. Only required in local mode**
+3. **Only for local mode: start the API server**
 ```bash
 skyvern run server
 ```
+
+4. **Restart your MCP client app** and ask it to use Skyvern tools.
+
+## Config file locations
+
+| Client | Auto-configured by `skyvern init` | Config location |
+|---|---|---|
+| Claude Desktop (macOS) | Yes | `~/Library/Application Support/Claude/claude_desktop_config.json` |
+| Claude Desktop (Linux) | Yes | `~/.config/Claude/claude_desktop_config.json` (or `~/.local/share/Claude/claude_desktop_config.json`) |
+| Cursor | Yes | `~/.cursor/mcp.json` |
+| Windsurf | Yes | `~/.codeium/windsurf/mcp_config.json` |
+| Claude Code (project scope) | No | `<project>/.mcp.json` |
+| Claude Code (user/local scopes) | No | `~/.claude.json` |
+
+## Manual configuration (any MCP client)
+
+Use this if you are setting up a custom MCP client, or Claude Code.
+
+```json
+{
+  "mcpServers": {
+    "Skyvern": {
+      "env": {
+        "SKYVERN_BASE_URL": "https://api.skyvern.com",
+        "SKYVERN_API_KEY": "YOUR_SKYVERN_API_KEY"
+      },
+      "command": "/absolute/path/to/python3",
+      "args": ["-m", "skyvern", "run", "mcp"]
+    }
+  }
+}
+```
+
+For local mode:
+- set `SKYVERN_BASE_URL` to `http://localhost:8000`
+- use your local `.env` API key from `skyvern init`
+- run `skyvern run server` before using MCP
+
+## Claude Code setup
+
+`skyvern init` does not currently write Claude Code config automatically.
+
+For Claude Code project scope, create `<project>/.mcp.json`:
+
+```json
+{
+  "mcpServers": {
+    "Skyvern": {
+      "env": {
+        "SKYVERN_BASE_URL": "https://api.skyvern.com",
+        "SKYVERN_API_KEY": "YOUR_SKYVERN_API_KEY"
+      },
+      "command": "/absolute/path/to/python3",
+      "args": ["-m", "skyvern", "run", "mcp"]
+    }
+  }
+}
+```
+
+For Claude Code user/local scopes, place the same `mcpServers.Skyvern` object in `~/.claude.json`.
 
 ## Examples
 ### Skyvern allows Claude to look up the top Hackernews posts today
@@ -52,31 +118,3 @@ skyvern run server
 <video style={{ aspectRatio: '16 / 9', width: '100%' }} controls>
   <source src="https://github.com/user-attachments/assets/70cfe310-24dc-431a-adde-e72691f198a7" type="video/mp4" />
 </video>
-
-## Supported Applications
-`skyvern init` helps configure the following applications for you:
-- Cursor
-- Windsurf
-- Claude Desktop
-- Your custom MCP App?
-
-Use the following config if you want to set up Skyvern for any other MCP-enabled application
-```json
-{
-  "mcpServers": {
-    "Skyvern": {
-      "env": {
-        "SKYVERN_BASE_URL": "https://api.skyvern.com", # "http://localhost:8000" if running locally
-        "SKYVERN_API_KEY": "YOUR_SKYVERN_API_KEY" # find the local SKYVERN_API_KEY in the .env file after running `skyvern init` or in your Skyvern Cloud console
-      },
-      "command": "PATH_TO_PYTHON",
-      "args": [
-        "-m",
-        "skyvern",
-        "run",
-        "mcp"
-      ]
-    }
-  }
-}
-```
