🔄 synced local 'docs/' with remote 'docs/'
Synced from cloud PR: https://github.com/Skyvern-AI/skyvern-cloud/pull/8814
Author: @marcmuon

## Summary
Adds remote MCP runtime support over streamable HTTP (auth + stateless guardrails), on top of `mcp-process-leak-fix`.

- Base branch: `mcp-process-leak-fix`
- Head branch: `mcp-remote-hosting-mvp`

## Important Rollout Note
This PR does **not** provision production hosting.

This is app/runtime support only. Remote MCP is not production-usable until a follow-up infra PR deploys:
- dedicated MCP service/task
- LB/TLS routing for `/mcp`
- env/secrets wiring and health checks

## What Changed
- `skyvern run mcp` supports remote transport/runtime flags:
  - `--transport`, `--host`, `--port`, `--path`, `--stateless-http`
- Added HTTP auth middleware for MCP transport.
- Added request-scoped API-key client routing in shared client layer.
- Added stateless-mode safeguards.
- Added bounded LRU cache for per-api-key SDK clients.
- Fixed LRU eviction cleanup to close evicted SDK clients (`aclose`) to prevent resource leaks under API-key churn.
- Removed duplicate `skyvern_run_task` MCP tool definition from `run_commands`; canonical tool remains in `mcp_tools/browser`.
- Added regression tests for eviction cleanup and `run_task` registration routing.
- Added docs/ops artifacts:
  - `docs/integrations/mcp.mdx`
  - `cloud_docs/mcp/REMOTE_HOSTING_RUNBOOK.md`
  - `scripts/smoke_mcp_remote_http.py`

## Validation
- `uv run ruff check skyvern/cli/core/client.py skyvern/cli/core/mcp_http_auth.py skyvern/cli/core/session_manager.py skyvern/cli/mcp_tools/session.py skyvern/cli/run_commands.py tests/unit/test_mcp_http_auth.py tests/unit/test_mcp_session_lifecycle.py tests/unit/test_run_commands_cleanup.py scripts/smoke_mcp_remote_http.py`
- `uv run pytest tests/unit/test_mcp_http_auth.py tests/unit/test_mcp_session_lifecycle.py tests/unit/test_run_commands_cleanup.py -q` (24 passed)
- `uv run pytest tests/unit/test_mcp_browser_tools.py test

--- a/docs/integrations/mcp.mdx
+++ b/docs/integrations/mcp.mdx
@@ -68,6 +68,30 @@ Add this to your MCP client's configuration file:
 
 Replace `/usr/bin/python3` with the output of `which python3` on your machine. For local mode, set `SKYVERN_BASE_URL` to `http://localhost:8000` and find your API key in the `.env` file after running `skyvern init`.
 
+### Option C: Remote MCP over HTTPS (streamable HTTP)
+
+Use this when your team provides a hosted MCP endpoint (for example: `https://mcp.skyvern.com/mcp`).
+
+In remote HTTP mode:
+- Clients must send `x-api-key` on every request.
+- Use `skyvern_session_create` first, then pass `session_id` explicitly on subsequent browser tool calls.
+
+If your MCP client supports native remote HTTP transport, configure it directly:
+
+```json
+{
+  "mcpServers": {
+    "SkyvernRemote": {
+      "type": "streamable-http",
+      "url": "https://mcp.skyvern.com/mcp",
+      "headers": {
+        "x-api-key": "YOUR_SKYVERN_API_KEY"
+      }
+    }
+  }
+}
+```
+
 <Accordion title="Config file locations by client">
 
 | Client | Path |
